<resources>
    <string name="app_name">Listener</string>
    <string name="title_activity_main">Proxy Init</string>
    <string name="title_activity_login">Configuración</string>

    <!-- Strings related to login -->
    <string name="puerto">Puerto:</string>
    <string name="ip">Ip:</string>
    <string name="ws_puerto">Puerto(WS):</string>
    <string name="ws_ip">Ip(WS):</string>

    <string name="edad">Edad:</string>
    <string name="prompt_edad">edad</string>
    <string name="sexo">Sexo:</string>
    <string name="masculino">Masculino</string>
    <string name="femenino">Femenino</string>
    <string name="prompt_puerto">9090</string>
    <string name="prompt_ip">Ip(xxx.xxx.xxx.xxx)</string>
    <string name="action_aceptar">Aceptar</string>
    <string name="action_enviar">Enviar</string>

    <string name="action_salir">Salir</string>
    <string name="error_invalid_port">This email address is invalid</string>
    <string name="error_field">This field is required</string>
</resources>
