<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <ScrollView
        android:id="@+id/config_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/edad_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/edad"
                        android:inputType="text"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textSize="24sp" />

                    <EditText
                        android:id="@+id/edad"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_edad"
                        android:inputType="number"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textSize="24sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginLeft="26dp">

                    <TextView
                        android:id="@+id/sexo_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/sexo"
                        android:singleLine="true"
                        android:textSize="24sp" />

                    <RadioGroup
                        android:id="@+id/radioGrupo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <RadioButton
                            android:id="@+id/masc"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/masculino" />

                        <RadioButton
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/femenino" />
                    </RadioGroup>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/puerto_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:text="@string/puerto"
                        android:textSize="24sp" />

                    <EditText
                        android:id="@+id/puerto"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_puerto"
                        android:inputType="number"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textSize="24sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginLeft="26dp">

                    <TextView
                        android:id="@+id/ip_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:text="@string/ip"
                        android:textSize="24sp" />

                    <EditText
                        android:id="@+id/ip"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_ip"
                        android:imeActionId="6"
                        android:imeActionLabel="@string/action_aceptar"
                        android:imeOptions="actionUnspecified"
                        android:inputType="text"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textSize="24sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/aceptarMain"
                    style="?android:textAppearanceSmall"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/action_aceptar"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/enviarMain"
                    style="?android:textAppearanceSmall"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="26dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/action_enviar"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/salirMain"
                    style="?android:textAppearanceSmall"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="26dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/action_salir"
                    android:textSize="30sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>