<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <ScrollView
        android:id="@+id/send_form"
        android:layout_width="300dp"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/send_form_linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/puerto_label_env"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ws_puerto"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/ws_puerto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="8080"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/ws_ip_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ws_ip"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/ws_ip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="192.168.0.146"
                android:imeActionId="6"
                android:imeActionLabel="@string/action_aceptar"
                android:imeOptions="actionUnspecified"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true"
                android:textSize="24sp" />

            <Button
                android:id="@+id/ws_enviar"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_enviar"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/ws_salir"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_salir"
                android:textSize="30sp"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>